[package]
name = "networking_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
axum = "0.7.4"
dotenv = "0.15.0"
sqlx = { version = "0.7", default-features = false, features = ["runtime-async-std", "macros", "mysql", "chrono"] }
time = { version = "0.3.22", default-features = false, features = ["formatting", "macros"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
